gestion erreurs + début ihm